--- a/src/style.css
+++ b/src/style.css
@@ -44,3 +44,21 @@ h1 {
   font-size: 3.2em;
   line-height: 1.1;
 }
+
+.overlay {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  pointer-events: none;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.dot {
+  height: 5px;
+  width: 5px;
+  background-color: rgb(192, 192, 192);
+  border-radius: 50%;
+  display: inline-block;
+}
